2003-11-14  Mark Kettenis  <kettenis@gnu.org>

	* sparc-linux-tdep.c: Include "frame.h", "frame-base.h",
	"frame-unwind.h", "gdbcore.h", "regcache.h", "symtab.h",
	"trad-frame.h", "gdb_assert.h" and "gdb_string.h".
	(LINUX32_SIGTRAMP_INSN0, LINUX32_SIGTRAMP_INSN1,
	LINUX32_RT_SIGTRAMP_INSN0, LINUX32_RT_SIGTRAMP_INSN1): New
	defines.
	(sparc_linux_sigtramp_start): New function.
	(sparc32_linux_sigtramp_start): New function.
	(sparc32_linux_rt_sigtramp_start): New function.
	(sparc32_linux_pc_in_sigtramp): New function.
	(sparc32_linux_sigtramp_frame_cache): New function.
	(sparc32_linux_sigtramp_frame_this_id): New function.
	(sparc32_linux_sigtramp_frame_prev_register): New function.
	(sparc32_linux_sigtramp_frame_unwind): New variable.
	(sparc32_linux_sigtramp_frame_sniffer): New function.
	(sparc32_linux_init_abi): Set pc_in_sigtramp, Add
	sparc32_linux_sigtramp_frame_sniffer.

	* configure.in: Check for <machine/reg.h>.  Check for `struct reg'
	in <machine/reg.h>.
	* configure, config.in: Regenerate.

2003-11-07  Mark Kettenis  <kettenis@gnu.org>

	From Peter Schauer  <Peter.Schauer@Regent.E-Technik.TU-Muenchen.DE>:
	* sparc-tdep.c (sparc32_register_names): Fix typo.
	* sparc-sol2-tdep.c (sparc32_sol2_init_abi): Set pc_in_sigtramp.
	* config/sparc/sol2.mh (NATDEPFILES): Add gcore.o.
	* config/sparc/sol64.mh (NATDEPFILES): Add gcore.o.

2003-11-02  Mark Kettenis  <kettenis@gnu.org>

	* configure.host: Add sparc64-*-solaris2* and sparcv9-*-solaris2*.
	* configure.tgt: Add sparc64-*-solaris2* and sparcv9-*-solaris2*.
	* config/sparc/sol64.mh: New file.
	* config/sparc/sol64.mt: New file.
	* Makefile.in (sparc64-sol2-nat.o): Fix typo.
	(sparc64-sol2-tdep.o): Fix typo.

	* lin-lwp.c (lin_lwp_thread_alive): Use PTRACE_PEEKDATA instead of
	PTRACE_PEEKUSER.  Return zero if the call failed with ESRCH.

2003-11-02  Mark Kettenis  <kettenis@gnu.org>

	Merge from mailine:

	2003-10-27  Andrew Cagney  <cagney@redhat.com>
